# auto-retry-http-decorator-970224

./: CONTRIBUTING.md  README.md  pyproject.toml
src/auto_retry_http_decorator/: __init__.py  cli.py  core.py
tests/: test_core.py
